# real-time-quiz

./: AI-Collaboration-Document.md  README.md  presentation-video-link.md  system-design.md
backend/: .env.example  README.md  main.py  requirements.txt
backend/app/: auth.py
backend/app/api/v1/: __init__.py  quizzes.py  users.py
backend/app/core/: __init__.py  config.py  database.py  redis.py  sercurity.py
backend/app/models/: __init__.py  answer.py  answer_attempt.py  leaderboard.py  question.py  quiz.py  quiz_attempt.py  user.py
backend/app/schemas/: leaderboard.py  user.py
backend/app/scripts/: mock_data.py
backend/app/services/: leaderboard.py  redis.py  scoring.py
backend/app/websocket/v1/: websocket.py
database_and_redis_servers/: docker-compose.yml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Leaderboard.tsx  QuizSession.tsx
frontend/src/pages/: QuizPage.tsx  QuizSession.tsx
frontend/src/services/: websocket.ts
naive-demo/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
naive-demo/static/: index.html
